<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@color/teal_200"
                android:layout_margin="16dp"
                android:contentDescription="@string/user_image"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    style="@style/LightText"
                    android:layout_marginBottom="6dp"
                    android:layout_marginStart="24dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/name"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_follower"
                        android:layout_width="wrap_content"
                        style="@style/LightText"
                        android:layout_marginStart="24dp"
                        android:maxLines="1"
                        android:text="@string/followers"/>

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_width="wrap_content"
                        style="@style/LightText"
                        android:layout_marginStart="16dp"
                        android:maxLines="1"
                        android:text="@string/following"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>