<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserActivity">

        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/DarkText"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_username"
            style="@style/DarkText"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/username"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_detail_user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_company"
            style="@style/DarkText"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/company"
            app:layout_constraintTop_toBottomOf="@id/img_detail_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_location"
            style="@style/DarkText"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/location"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_followers"
            style="@style/DarkText"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:text="@string/followers"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_detail_following"/>

        <TextView
            android:id="@+id/tv_detail_following"
            style="@style/DarkText"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:maxLines="1"
            android:text="@string/following"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_location"
            app:layout_constraintStart_toEndOf="@id/tv_detail_followers"
            app:layout_constraintEnd_toStartOf="@id/tv_detail_repository"/>

        <TextView
            android:id="@+id/tv_detail_repository"
            style="@style/DarkText"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:text="@string/repository"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_detail_following"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_following"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>